<resources>
    <string name="app_name">Assignment_sep20</string>
    <string name="calculation">Calculation</string>
    <string name="number1">Number 1 :</string>
    <string name="number2">Number 2 :</string>
    <string name="result">Result:</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="quit">Quit</string>
    <string name="add">Add</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
</resources>